provide placeholder to prevent content shift

--- a/Client/src/styles/style.css
+++ b/Client/src/styles/style.css
@@ -990,7 +990,7 @@ h2.Overview-category {
 
 .selectedCheckmark {
   position: absolute;
-  left: 60px;
+  left: 45px;
   top: -12px;
   font-size: 45px;
 }
